WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
88397
PositionIterator::setOffsetInLeafNode() is not used anywhere.
https://bugs.webkit.org/show_bug.cgi?id=88397
Summary
PositionIterator::setOffsetInLeafNode() is not used anywhere.
Shinya Kawanaka
Reported
2012-06-06 00:06:20 PDT
We can remove it.
Attachments
Patch
(2.74 KB, patch)
2012-06-06 00:08 PDT
,
Shinya Kawanaka
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Shinya Kawanaka
Comment 1
2012-06-06 00:08:49 PDT
Created
attachment 145949
[details]
Patch
WebKit Review Bot
Comment 2
2012-06-06 02:04:00 PDT
Comment on
attachment 145949
[details]
Patch Clearing flags on attachment: 145949 Committed
r119573
: <
http://trac.webkit.org/changeset/119573
>
WebKit Review Bot
Comment 3
2012-06-06 02:04:18 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug