PositionIterator:;setOffsetInLeafNode() is not used anywhere. https://bugs.webkit.org/show_bug.cgi?id=88397

Reviewed by Ryosuke Niwa.

It's not used anywhere. We can remove it safely.

No new tests, no change in behavior.

* WebCore.order:
* dom/PositionIterator.cpp:
* dom/PositionIterator.h:


Canonical link: https://commits.webkit.org/106235@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@119573 268f45cc-cd09-0410-ab3c-d52691b4dbfc